Scrollbar & Fullscreen fix

--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -1188,7 +1188,7 @@ only screen and (min-resolution: 144dpi) {
     overflow: visible;
   }
   .pm_overflow_hidden {
-    overflow: visible;
+    overflow: hidden;
   }
   .page-template-page-blog-ajax .pm_blog_item {
     width: 50%;
